--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <ul class="principal-menu">
       <li><a href="#" class="btn-diseno">Diseño Web</a>
         <ul class="sub-menu">
-          <li><a href="file:///D:/dise%C3%B1o%20web/eje.html">TRIMESTRE 1</a></li>
+          <li><a href="file:"eje.html">TRIMESTRE 1</a></li>
           <li><a href="#">TRIMESTRE 2</a></li>
           <li><a href="#">TRIMESTRE 3</a></li>
         </ul>
