--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <h1>PROYECTO DE AREA TECNICA INFORMATICA 2025-2026</h1>
 
   <div class="header-info">
-    <img src="D:\diseño web\imagenes\nicolas.png" alt="Logo del Colegio" />
+    <img src="nicolas.png" alt="Logo del Colegio" />
     <div class="text">
       Nombre: Ginger Salazar<br />
       Curso: 3ro “M”
