--- a/eje.html
+++ b/eje.html
@@ -141,10 +141,10 @@
   <!-- Galería de imágenes -->
   <h3>Canva</h3>
   <div class="galeria">
-    <img src="D:\diseño web\imagenes\00webhost.png" alt="Imagen 1" />
-    <img src="D:\diseño web\imagenes\free.png" alt="Imagen 2" />
-    <img src="D:\diseño web\github.png" alt="Imagen 3" />
-    <img src="D:\diseño web\imagenes\lucushost.png" alt="Imagen 4" />
+    <img src="00webhost.png" alt="Imagen 1" />
+    <img src="free.png" alt="Imagen 2" />
+    <img src="github.png" alt="Imagen 3" />
+    <img src="lucushost.png" alt="Imagen 4" />
   </div>
 
 </body>
